<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="28dp"
        android:text="@string/mainMenuTitle"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10pt"
        android:onClick="showForm"
        android:text="@string/form" />

    <Button
        android:id="@+id/btnIntegrants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="showIntegrants"
        android:text="@string/integrants" />

    <Button
        android:id="@+id/btnAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="showDatePicker"
        android:text="@string/age" />

</LinearLayout>