<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FormActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="529dp"
        android:paddingTop="28dp"
        android:paddingBottom="15dp"
        android:text="@string/formTitle"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold" />

    <Button
        android:id="@+id/selectImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="296dp"
        android:text="@string/selectImage" />

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="221dp"
        android:layout_height="190dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        android:layout_marginBottom="89dp" />

    <Button
        android:id="@+id/saveForm"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="7dp"
        android:onClick="saveForm"
        android:text="@string/sendForm" />

    <Button
        android:id="@+id/cancelButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="212dp"
        android:layout_marginRight="212dp"
        android:layout_marginBottom="7dp"
        android:onClick="cancelForm"
        android:text="@string/cancelForm" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="345dp"

        android:hint="@string/formPhoneNumber"
        android:inputType="phone"
        android:maxLength="10" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/cc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="392dp"
        android:hint="@string/formCc"
        android:inputType="number" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="436dp"
        android:hint="@string/formLastName" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="482dp"
        android:hint="@string/formName" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/selectedImage"
        android:layout_width="match_parent"
        android:layout_height="17dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="69dp"
        android:visibility="invisible" />

</RelativeLayout>
